@@ -4,6 +4,7 @@ t/00-load.t			Module load test
 t/01-init-and-mark.t		Load module, init fanotify, mark a dir
 t/02-non-read-nonblocking.t	Test non-blocking read and check errno
 t/03-read-some-events.t		Monitor a directory, open two files
+t/_validate_kernel.pm		Simple kernel feature validation function
 Makefile.PL			MakeMaker make file
 MANIFEST			This list of files
 README				Pseudo-Readme
