@@ -6,3 +6,7 @@ Change log for Linux::Fanotify
 20140722	[ 1.1 ]
 	- New autoclose variables for events and fanotify groups
 	- Documentation updates
+
+20150804	[ 1.1.1 ]
+	- Improve "make test" behavior on machines w/o fanotify support
+	- (no functional modification)
